# ITBot

./: .gitignore  LICENSE  README.md  accounts.py  bot.py  manage.py  pyproject.toml  sepay.py
sepay_pg/: __init__.py  client.py
